--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "gsap": "^3.13.0",
+    "lenis": "^1.3.14",
     "lucide-react": "^0.552.0",
     "motion": "^12.23.24",
     "next": "16.0.1",
     "next-themes": "^0.4.6",
+    "ogl": "^1.0.11",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "tailwind-merge": "^3.3.1"
